--- a/HTML_DZ_Module_10_Week_8_(2).html
+++ b/HTML_DZ_Module_10_Week_8_(2).html
@@ -15,8 +15,8 @@
 		<h2>Input</h2>
 		<p>
 			<input type="text" id="deflt" name="default" placeholder="Enter some text">
-			<input type="text" id="corr" name="correct" placeholder="valid text &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ">
-			<input type="text" id="ncorr" name="nocorrect" placeholder="invalid text &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &#10004;">
+			<input type="text" id="corr" name="correct" placeholder="valid text &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &#10004;">
+			<input type="text" id="ncorr" name="nocorrect" placeholder="invalid text &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &#10008;">
 
 		</p>
 	</div>
@@ -26,6 +26,15 @@
 		<p class="row">
 			<input type="checkbox" id="check" class="custom-checkbox"><label for="check">Subscribe</label>
 			<input type="checkbox" id="nocheck" class="custom-checkboxN"><label for="nocheck">Subscribe</label>
+		</p>
+	</div>
+
+	<div id="input">
+		<h2>Radio buttons</h2>
+		<p class="row">
+			<span>Gender</span>
+			<input type="checkbox" id="male" class="custom-radio"><label for="male">Male</label>
+			<input type="checkbox" id="female" class="custom-radioF"><label for="female">Female</label>
 		</p>
 	</div>
 </div>
