--- a/HTML_DZ_Module_10_Week_8_(2).html
+++ b/HTML_DZ_Module_10_Week_8_(2).html
@@ -5,14 +5,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>HTML_DZ_Module_10_Week_8_(2)Yemelyanov</title>
 
-	<link rel="stylesheet" media="screen and (min-width:800px) and (max-width:3840px)  " href="css/HTML_DZ_Module_10_Week_8_(2).css">
+	<link rel="stylesheet" media="screen and (min-width:800px) and (max-width:3840px)  " href="css/HTML_DZ_Module_10_Week_8_(2)_.css">
+	<link rel="stylesheet" media="screen and (min-width:800px) and (max-width:3840px)  " href="css\HTML_DZ_Module_10_Week_8_(2)_library.css">
 
 	<style ></style>
 </head>
 <body>
   <div class="container">
 	<div id="input">
-		<h2>Input</h2>
+		<h1>Input</h1>
 		<p>
 			<input type="text" id="deflt" name="default" placeholder="Enter some text">
 			<input type="text" id="corr" name="correct" placeholder="valid text &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &#10004;">
@@ -22,7 +23,7 @@
 	</div>
 
 	<div id="input">
-		<h2>Check boxed</h2>
+		<h1>Check boxed</h1>
 		<p class="row">
 			<input type="checkbox" id="check" class="custom-checkbox"><label for="check">Subscribe</label>
 			<input type="checkbox" id="nocheck" class="custom-checkboxN"><label for="nocheck">Subscribe</label>
@@ -30,11 +31,32 @@
 	</div>
 
 	<div id="input">
-		<h2>Radio buttons</h2>
+		<h1>Radio buttons</h1>
 		<p class="row">
 			<span>Gender</span>
 			<input type="checkbox" id="male" class="custom-radio"><label for="male">Male</label>
 			<input type="checkbox" id="female" class="custom-radioF"><label for="female">Female</label>
+		</p>
+	</div>
+
+	<div id="input">
+		<h1>Buttons</h1>
+		<p class="row">
+			<input type="button" value="Disable" class="disabl reckt white" >
+			<input type="button" value="Active" class="act reckt white">
+			<input type="button" value="Hover" class="hov reckt white">
+			<input type="button" value="Danger" class="dang reckt white">
+			<input type="button" value="Hover" class="hov1 reckt white" >
+			<input type="button" value="+" class="plus circle white" >
+			<input type="button" value="-" class="minus circle white" >
+		</p>
+	</div>
+
+	<div id="input">
+		<h1>Text area</h1>
+		<p class="row">
+			<textarea class="t_area" name="text" placeholder="Enter some text"></textarea>
+
 		</p>
 	</div>
 </div>
