--- a/HTML_DZ_Module_10_Week_8_(1).html
+++ b/HTML_DZ_Module_10_Week_8_(1).html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>DZ_Module_8_9_Yemelyanov</title>
+	<title>HTML_DZ_Module_10_Week_8_(1) Yemelyanov</title>
 
 	<link rel="stylesheet" media="screen and (min-width:800px) and (max-width:3840px)  " href="css/HTML_DZ_Module_10_Week_8_(1).css">
 
