--- a/HTML_DZ_Module_10_Week_8_(2).html
+++ b/HTML_DZ_Module_10_Week_8_(2).html
@@ -16,8 +16,8 @@
 		<h1>Input</h1>
 		<p>
 			<input type="text" id="deflt" name="default" placeholder="Enter some text">
-			<input type="text" id="corr" name="correct" placeholder="valid text &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &#10004;">
-			<input type="text" id="ncorr" name="nocorrect" placeholder="invalid text &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &#10008;">
+			<input type="text" id="corr" name="correct" placeholder="valid text ">
+			<input type="text" id="ncorr" name="nocorrect" placeholder="invalid text">
 
 		</p>
 	</div>
