--- a/HTML_DZ_Module_10_Week_8_(2).html
+++ b/HTML_DZ_Module_10_Week_8_(2).html
@@ -6,7 +6,7 @@
 	<title>HTML_DZ_Module_10_Week_8_(2)Yemelyanov</title>
 
 	<link rel="stylesheet" media="screen and (min-width:800px) and (max-width:3840px)  " href="css/HTML_DZ_Module_10_Week_8_(2)_.css">
-	<link rel="stylesheet" media="screen and (min-width:800px) and (max-width:3840px)  " href="css\HTML_DZ_Module_10_Week_8_(2)_library.css">
+	<link rel="stylesheet" media="screen and (min-width:800px) and (max-width:3840px)  " href="css/HTML_DZ_Module_10_Week_8_(2)_library.css">
 
 	<style ></style>
 </head>
