--- a/HTML_DZ_Module_10_Week_8_(3).html
+++ b/HTML_DZ_Module_10_Week_8_(3).html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="row">
-          <input type="text" class="inputT blck" name="mail" placeholder="Mail">
+          <input type="text" class="inputT blck" name="mail" id="corr" placeholder="Mail">
           <input type="text" class="inputT blck" name="date_" placeholder="mm/dd/yyyy">
         </div>
       </div>
