--- a/HTML_DZ_Module_11_12_week_9(1).html
+++ b/HTML_DZ_Module_11_12_week_9(1).html
@@ -11,26 +11,67 @@
     <title>Hello, world!</title>
   </head>
   <body>
-		<div class="container-fluid bg-info">
-			<div class="row text-white">
-				<div class="col-lg-1 text-white">
-					<img src="pic/user-graduate-solid.svg" alt="student" class="w-5">
-				</div>
-				<div class="col-lg">Attendance</div>
-				<div class="col-lg">Schedule</div>
-				<div class="col-lg">Homework</div>
-				<div class="col-lg-1">
-					<img src="pic/bell-solid.svg" alt="bell" class="text-white">
-				</div>
-				<div class="col-lg-1">
-					<img src="pic/user-circle-solid.svg" alt="user" class="">
+		<div class="container-fluid ">
+			<div class="row text-white p-2 bg-info">
+				<div class="col-lg-1 ">
+					<div class="row align-items-center">
+						<div class="col-lg-6 ">
+							<img src="pic/user-graduate.png" alt="student" width="50" height="50" class="">
+						</div>
+						<div class="col-lg-6 "><span class="">Attendance</span></div>
+
+					</div>
 				</div>
 				<div class="col-lg-1">
-					<img src="pic/door-open-solid.svg" alt="door" class="">
+					<div class="row">
+						<div class="col-lg-6 align-middle"></div>
+						<div class="col-lg-6 align-middle"><span class="">Schedule</span></div>
+					</div>
+				</div>
+				<div class="col-lg-1">
+					<div class="row">
+						<div class="col-lg-6 align-middle"></div>
+						<div class="col-lg-6 align-middle"><span class=" text-white-50">Homework</span></div>
+					</div>
+				</div>
+				<div class="col-lg"></div>
+				<div class="col-lg-1">
+
+				</div>
+				<div class="col-lg-1">
+					<div class="row">
+						<div class="col-lg-6">
+
+						</div>
+						<div class="col-lg-6">
+							<img src="pic/bell-solid 1.png" style="opacity:0.5" alt="bell" class="m-1" width="50" height="50">
+						</div>
+
+					</div>
+
+				</div>
+				<div class="col-lg-1">
+					<div class="row">
+						<div class="col-lg-6">
+							<img src="pic/user-circle-solid.png" style="opacity:0.5" alt="user" width="50" height="50" class="m-1 ">
+						</div>
+						<div class="col-lg-6">
+							<img src="pic/door-open-solid.png" style="opacity:0.5" alt="door" width="50" height="50" class="align-middle mt-1 ">
+						</div>
+
+					</div>
 				</div>
 			</div>
+			<div class="row">
+					<div class="col-lg-12">
+						<span class="">23 APRIL, TUESDAY</span>
+					</div>
 
-	</div>
+			</div>
+
+		</div>
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
