--- a/HTML_DZ_Module_11_12_week_9(1).html
+++ b/HTML_DZ_Module_11_12_week_9(1).html
@@ -12,63 +12,59 @@
   </head>
   <body>
 		<div class="container-fluid ">
-			<div class="row text-white p-2 bg-info">
-				<div class="col-lg-1 ">
-					<div class="row align-items-center">
-						<div class="col-lg-6 ">
-							<img src="pic/user-graduate.png" alt="student" width="50" height="50" class="">
-						</div>
-						<div class="col-lg-6 "><span class="">Attendance</span></div>
-
-					</div>
+      <nav class="navbar navbar-dark bg-info">
+			<div class="row text-white p-2  align-items-center">
+				<div class="col-lg-1 d-flex justify-content-center">
+					<img src="pic/user-graduate.png" alt="student" width="50" height="50" class="">
 				</div>
 				<div class="col-lg-1">
-					<div class="row">
-						<div class="col-lg-6 align-middle"></div>
-						<div class="col-lg-6 align-middle"><span class="">Schedule</span></div>
-					</div>
+					<h4 class="">Attendance</h4>
 				</div>
 				<div class="col-lg-1">
-					<div class="row">
-						<div class="col-lg-6 align-middle"></div>
-						<div class="col-lg-6 align-middle"><span class=" text-white-50">Homework</span></div>
-					</div>
-				</div>
-				<div class="col-lg"></div>
-				<div class="col-lg-1">
-
+					<h4 class="text-white-50">Schedule</h4>
 				</div>
 				<div class="col-lg-1">
-					<div class="row">
-						<div class="col-lg-6">
-
-						</div>
-						<div class="col-lg-6">
-							<img src="pic/bell-solid 1.png" style="opacity:0.5" alt="bell" class="m-1" width="50" height="50">
-						</div>
-
-					</div>
-
+          <h4 class=" text-white-50">Homework</h4>
+        </div>
+        <div class="col-lg-1"></div>
+        <div class="col-lg-1"></div>
+        <div class="col-lg-1"></div>
+        <div class="col-lg-1"></div>
+				<div class="col-lg-1"></div>
+        <div class="col-lg-1 d-flex justify-content-center ">
+          <img src="pic/bell-solid 1.png" style="opacity:0.5" alt="bell" class="m-1" width="40" height="40">
+        </div>
+				<div class="col-lg-1 d-flex justify-content-center">
+					<img src="pic/user-circle-solid.png" style="opacity:0.5" alt="user" width="40" height="40" class="m-1 ">
 				</div>
-				<div class="col-lg-1">
-					<div class="row">
-						<div class="col-lg-6">
-							<img src="pic/user-circle-solid.png" style="opacity:0.5" alt="user" width="50" height="50" class="m-1 ">
-						</div>
-						<div class="col-lg-6">
-							<img src="pic/door-open-solid.png" style="opacity:0.5" alt="door" width="50" height="50" class="align-middle mt-1 ">
-						</div>
-
-					</div>
+				<div class="col-lg-1  d-flex justify-content-center ">
+					<img src="pic/door-open-solid.png" class="" style="opacity:0.5" alt="door" width="40" height="40" >
 				</div>
 			</div>
-			<div class="row">
-					<div class="col-lg-12">
-						<span class="">23 APRIL, TUESDAY</span>
-					</div>
+      </nav>
 
+
+			<div class="row justify-content-center mt-5 ">
+				<div class="col-lg-2">
+					<h2 class="text-nowrap">23 APRIL, TUESDAY</h2>
+				</div>
 			</div>
 
+      <div class="row mt-5  ml-1 mr-1">
+        <div class="col-lg-1 border border-bottom-0">1 Lesson</div>
+        <div class="col-lg-1 border-bottom">2 Lesson</div>
+        <div class="col-lg-1 border-bottom">3 Lesson</div>
+        <div class="col-lg-1 border-bottom">4 Lesson</div>
+        <div class="col-lg-1 border-bottom">5 Lesson</div>
+        <div class="col-lg-1 border-bottom">6 Lesson</div>
+        <div class="col-lg-1border-bottom">7 Lesson</div>
+        <div class="col-lg-1border-bottom">8 Lesson</div>
+        <div class="col-lg-1border-bottom"></div>
+        <div class="col-lg-1border-bottom"></div>
+        <div class="col-lg-1border-bottom"></div>
+
+
+      </div>
 		</div>
 
 
